<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".DailyActivity_Activity">

    <com.unipi.di.sam.myhealth.MyCustomBarChart
        android:id="@+id/myCustomBarChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioButton"
        android:fontFamily="monospace"
        android:text="@string/consiglio"
        android:textSize="12sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/stepsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/steps" />

        <RadioButton
            android:id="@+id/activityDurationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/activity_duration" />

        <RadioButton
            android:id="@+id/caloriesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/calories" />
    </RadioGroup>

</RelativeLayout>