<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_viewBG"
        app:cardCornerRadius="12dp"
        app:contentPadding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="monospace"
                android:text="@string/steps"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/currentSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps"
                android:fontFamily="monospace"
                android:padding="6dp"
                android:text="@string/current_steps"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps"
                android:layout_alignBaseline="@id/currentSteps"
                android:layout_alignTop="@id/currentSteps"
                android:layout_alignBottom="@id/currentSteps"
                android:layout_toEndOf="@id/currentSteps"
                android:fontFamily="monospace"
                android:padding="6dp"
                android:text="@string/slash"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps"
                android:layout_alignBaseline="@id/currentSteps"
                android:layout_alignTop="@id/currentSteps"
                android:layout_alignBottom="@id/currentSteps"
                android:layout_toEndOf="@id/slash"
                android:fontFamily="monospace"
                android:padding="6dp"
                android:text="@string/steps_goal"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/percentage_pbSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/steps_pb2"
                android:layout_alignTop="@id/steps_pb2"
                android:layout_alignEnd="@id/steps_pb2"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/percentage_pbSteps"
                android:textSize="12sp" />

            <ProgressBar
                android:id="@+id/steps_pb2"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/goal"
                android:max="100"
                android:padding="20dp"
                android:progress="0"
                android:progressTint="@color/green" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>