<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_viewBG"
        app:contentPadding="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/body_composition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/body_composition"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/body_composition"
                android:layout_alignBottom="@id/edit_weight"
                android:layout_alignParentStart="true"
                android:fontFamily="monospace"
                android:gravity="center|start"
                android:padding="8dp"
                android:text="@string/weight"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edit_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/body_composition"
                android:layout_toStartOf="@id/weight2"
                android:layout_toEndOf="@id/weight"
                android:gravity="center"
                android:inputType="numberDecimal"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/weight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/weight"
                android:layout_alignParentEnd="true"
                android:text="Kg" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weight"
                android:layout_alignBottom="@id/edit_height"
                android:layout_alignParentStart="true"
                android:fontFamily="monospace"
                android:gravity="center|start"
                android:padding="8dp"
                android:text="@string/height"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edit_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_weight"
                android:layout_toStartOf="@id/height2"
                android:layout_toEndOf="@id/height"
                android:gravity="center"
                android:inputType="numberDecimal"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/height2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_height"
                android:layout_alignParentEnd="true"
                android:text="cm" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/save_BodyComposition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView2"
        android:text="@string/save_goals" />
</RelativeLayout>